<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.solvd</groupId>
	<artifactId>mobile-automation-native</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>CarinaDemo</name>
	<url>https://zebrunner.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<carina-core_version>1.1.3</carina-core_version>
		<carina-dataprovider.version>1.1.3</carina-dataprovider.version>
		<carina-api.version>1.1.3</carina-api.version>
		<carina-agent.version>1.9.7</carina-agent.version>
		<carina-appcenter.version>1.1.4</carina-appcenter.version>
		<java.version>21</java.version>
		<zebrunner-agent.version>1.9.6</zebrunner-agent.version>
		<lombok.version>1.18.32</lombok.version>
		<suite>helloWorld</suite>
	</properties>

	<repositories>
		<!-- Uncomment only for testing any SNAPSHOT version of carina or zebrunner agent! -->
		<!--repository>
			<id>zebrunner_snapshots</id>
			<name>zebrunner Snapshots</name>
			<url>https://nexus.zebrunner.dev/repository/ce-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository-->
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-core</artifactId>
			<version>${carina-core_version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-dataprovider</artifactId>
			<version>${carina-dataprovider.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-api</artifactId>
			<version>${carina-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>agent-testng</artifactId>
			<version>${carina-agent.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-appcenter</artifactId>
			<version>${carina-appcenter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.4.14</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.14</version>
		</dependency>

		<dependency>
			<!--we need it to reuse benefits of zebrunner testng agent for webdriver
				sesssion(s) declaration -->
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.12.18</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.5.3</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>initialize</phase>
						<goals>
							<goal>copy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>com.zebrunner</groupId>
							<artifactId>agent-core</artifactId>
							<version>${zebrunner-agent.version}</version>
							<outputDirectory>${project.build.directory}/agent</outputDirectory>
							<destFileName>zebrunner-agent.jar</destFileName>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<argLine>-javaagent:${project.build.directory}/agent/zebrunner-agent.jar</argLine>
					<useSystemClassLoader>false</useSystemClassLoader>
					<suiteXmlFiles>
						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
